Definim el métode getView, que farà que es mostren les dades com volem.

--- a/app/src/main/res/layout/lv_pelis_row.xml
+++ b/app/src/main/res/layout/lv_pelis_row.xml
@@ -31,22 +31,12 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvCriticsScore"
+            android:id="@+id/tvReleaseDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/tvTitle"
             android:layout_below="@+id/tvTitle"
             android:hint="91%"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tvCast"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tvCriticsScore"
-            android:ellipsize="end"
-            android:hint="Christian Bale, Joseph-Gordon Levitt, Heath Ledger, Maggie Gylenhall"
-            android:maxLines="1"
             android:textSize="12sp" />
 
     </RelativeLayout>
