--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,80 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DetailActivity">
+<layout>
 
-    <!-- @drawable/large_movie_poster sourced from
-         http://content8.flixster.com/movie/11/15/86/11158674_pro.jpg -->
-    <ImageView
-        android:id="@+id/ivPosterImage"
-        android:layout_width="133dp"
-        android:layout_height="169dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:adjustViewBounds="true"
-        android:maxHeight="160dp"
-        android:scaleType="fitXY"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".DetailActivity">
+
+        <!-- @drawable/large_movie_poster sourced from
+             http://content8.flixster.com/movie/11/15/86/11158674_pro.jpg -->
+        <ImageView
+            android:id="@+id/ivPosterImage"
+            android:layout_width="133dp"
+            android:layout_height="169dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:adjustViewBounds="true"
+            android:maxHeight="160dp"
+            android:scaleType="fitXY"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="The Dark Knight"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/ivPosterImage"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="The Dark Knight"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toRightOf="@+id/ivPosterImage"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvCriticsScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Critics Score: 93%"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="@+id/tvTitle"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        <TextView
+            android:id="@+id/tvCriticsScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Critics Score: 93%"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toLeftOf="@+id/tvTitle"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
-    <TextView
-        android:id="@+id/tvAudienceScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Audience Score: 93%"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toLeftOf="@+id/tvCriticsScore"
-        app:layout_constraintTop_toBottomOf="@+id/tvCriticsScore" />
+        <TextView
+            android:id="@+id/tvAudienceScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Audience Score: 93%"
+            android:textSize="14sp"
+            app:layout_constraintLeft_toLeftOf="@+id/tvCriticsScore"
+            app:layout_constraintTop_toBottomOf="@+id/tvCriticsScore" />
 
-    <TextView
-        android:id="@+id/tvCriticsConsensus"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:text="This is an excellent movie that has action and romance"
-        app:layout_constraintLeft_toLeftOf="@+id/ivPosterImage"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivPosterImage" />
+        <TextView
+            android:id="@+id/tvCriticsConsensus"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:text="This is an excellent movie that has action and romance"
+            app:layout_constraintLeft_toLeftOf="@+id/ivPosterImage"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivPosterImage" />
 
-    <TextView
-        android:id="@+id/tvSynopsis"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="This is a story about a protagonist defeating an antagonist"
-        app:layout_constraintLeft_toLeftOf="@+id/tvCriticsConsensus"
-        app:layout_constraintRight_toRightOf="@+id/tvCriticsConsensus"
-        app:layout_constraintTop_toBottomOf="@+id/tvCriticsConsensus" />
-
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvSynopsis"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="This is a story about a protagonist defeating an antagonist"
+            app:layout_constraintLeft_toLeftOf="@+id/tvCriticsConsensus"
+            app:layout_constraintRight_toRightOf="@+id/tvCriticsConsensus"
+            app:layout_constraintTop_toBottomOf="@+id/tvCriticsConsensus" />
+    </android.support.constraint.ConstraintLayout>
+</layout>
