--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -30,7 +30,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="The Dark Knight"
+            android:text=""
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintLeft_toRightOf="@+id/ivPosterImage"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Critics Score: 93%"
+            android:text=""
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@+id/tvTitle"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Audience Score: 93%"
+            android:text=""
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@+id/tvCriticsScore"
             app:layout_constraintTop_toBottomOf="@+id/tvCriticsScore" />
@@ -63,7 +63,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:text="This is an excellent movie that has action and romance"
+            android:text=""
             app:layout_constraintLeft_toLeftOf="@+id/ivPosterImage"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ivPosterImage" />
@@ -73,7 +73,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="This is a story about a protagonist defeating an antagonist"
+            android:text=""
             app:layout_constraintLeft_toLeftOf="@+id/tvCriticsConsensus"
             app:layout_constraintRight_toRightOf="@+id/tvCriticsConsensus"
             app:layout_constraintTop_toBottomOf="@+id/tvCriticsConsensus" />
