--- a/app/src/main/res/layout/lv_pelis_row.xml
+++ b/app/src/main/res/layout/lv_pelis_row.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp">
-
-    <ImageView
-        android:id="@+id/ivPosterImage"
-        android:layout_width="70dp"
-        android:layout_height="100dp"
-        android:layout_centerVertical="true"
-        android:adjustViewBounds="true"
-        android:maxHeight="70dp"
-        android:scaleType="fitXY"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
-    <RelativeLayout
+<layout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/ivPosterImage"
-        android:gravity="center_vertical">
+        android:padding="5dp">
 
-        <TextView
-            android:id="@+id/tvTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:hint="The Dark Knight"
-            android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/ivPosterImage"
+            android:layout_width="70dp"
+            android:layout_height="100dp"
+            android:layout_centerVertical="true"
+            android:adjustViewBounds="true"
+            android:maxHeight="70dp"
+            android:scaleType="fitXY"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-        <TextView
-            android:id="@+id/tvReleaseDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tvTitle"
-            android:layout_below="@+id/tvTitle"
-            android:hint="91%"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textSize="12sp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/ivPosterImage"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/tvTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:hint="The Dark Knight"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvReleaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/tvTitle"
+                android:layout_below="@+id/tvTitle"
+                android:hint="91%"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textSize="12sp" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
-
-</RelativeLayout>
+</layout>
